crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__execute_workflow_fn_with_single_delay@testing:sleep-workflow__workflow.join-next-produces-all-processed-error.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: execution_log
---
{
  "execution_id": "E_00000000000000000000000000",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "Created": {
          "ffqn": {
            "ifc_fqn": "testing:sleep-workflow/workflow",
            "function_name": "join-next-produces-all-processed-error"
          },
          "params": [],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "retry_exp_backoff": {
            "secs": 0,
            "nanos": 0
          },
          "max_retries": 4294967295,
          "component_id": "workflow:",
          "metadata": null,
          "scheduled_by": null
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "Locked": {
          "component_id": "workflow:",
          "executor_id": "Exr_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000001",
          "lock_expires_at": "1970-01-01T00:00:01Z"
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "HistoryEvent": {
          "event": {
            "type": "JoinSetCreate",
            "join_set_id": "g:1",
            "closing_strategy": "complete"
          }
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "HistoryEvent": {
          "event": {
            "type": "JoinSetRequest",
            "join_set_id": "g:1",
            "request": {
              "type": "DelayRequest",
              "delay_id": "Delay_00000000000000000000000000.g:1_0",
              "expires_at": "1970-01-01T00:00:00.010Z",
              "schedule_at": {
                "In": {
                  "secs": 0,
                  "nanos": 10000000
                }
              }
            }
          }
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "HistoryEvent": {
          "event": {
            "type": "JoinNext",
            "join_set_id": "g:1",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": false
          }
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "Locked": {
          "component_id": "workflow:",
          "executor_id": "Exr_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000002",
          "lock_expires_at": "1970-01-01T00:00:01.010Z"
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "HistoryEvent": {
          "event": {
            "type": "JoinNextTooMany",
            "join_set_id": "g:1",
            "requested_ffqn": null
          }
        }
      },
      "backtrace_id": null
    },
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "Finished": {
          "result": {
            "Ok": "None"
          },
          "http_client_traces": null
        }
      },
      "backtrace_id": null
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00.010Z",
      "event": {
        "join_set_id": "g:1",
        "event": {
          "type": "DelayFinished",
          "delay_id": "Delay_00000000000000000000000000.g:1_0"
        }
      }
    }
  ],
  "next_version": 7,
  "pending_state": {
    "type": "Finished",
    "finished": {
      "version": 7,
      "finished_at": "1970-01-01T00:00:00.010Z",
      "result_kind": "ok"
    }
  }
}
